add-hidden-features

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <audio src="hbd.mp3" autoplay hidden></audio>
     <div class="example">
-        <h1>Coming Soon...</h1>
+        <h1 id="hidden">Coming Soon...</h1>
         <p id="name"></p>
         <div id="flipdown" class="flipdown"></div>
     </div>
