--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <h1 id="hidden">Coming Soon...</h1>
         <p id="name"></p>
         <div id="flipdown" class="flipdown"></div>
+         <div class="btn-finish" >
+           <a href="ultah.html" id="btn-finish" target="_blank" rel="noopener noreferrer" class="link">Klik Disini yaaa...</a>
+         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
